[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "conformal-strategy-validator"
version = "0.1.0"
description = "Distribution-free strategy validation for algorithmic trading"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=csv --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["csv_validator"]